<resources>
    <!-- Names -->
    <string name="app_name" translatable="false">Tong</string>

    <!-- Buttons -->
    <string name="action_settings" translatable="false">Information</string>
    <string name="action_importexport" translatable="false">Import/Export</string>
    <string name="tabRecord">Aufnahme</string>
    <string name="tabPlay">Abspielen</string>
    <string name="ok">Ok</string>

    <!-- Keys -->
    <string name="extraPosition">position</string>

    <!-- MediaPlayer -->
    <string name="recStart">Record Started</string>
...

    <!-- Edit / Save -->
    <string name="givenname">Vorname: </string>
    <string name="surname">Nachname: </string>
    <string name="region">Region: </string>
    <string name="company">Firma: </string>
    <string name="title">Anrede: </string>
    <string-array name="titleArray">
        <item>Herr</item>
        <item>Frau</item>
    </string-array>
    <string name="save">Gespeichert</string>

...
    <string name="bewertung">Bewertung:</string>
    <string name="Bild">Bildauswahl</string>
    <string name="telefonnummer">Tel.: </string>
    <string name="email">Email:</string>

    <!-- Images Description -->
    <string name="image_of_the_record_button" translatable="false">Image of the Record Button</string>
    <string name="image_of_the_play_button" translatable="false">Image of the Play Button</string>
    <string name="SaveButtonDescription" translatable="false">Image of the Save Button</string>
    <string name="image_of_the_reset_button" translatable="false">Image of the Reset Button</string>
    <string name="image_of_the_playbutton" translatable="false">Image of the PlayButton</string>
    <string name="image_of_the_pause_stop_button" translatable="false">image of the Pause/Stop Button</string>
    <string name="background" translatable="false">Background image of the Card</string>
    <string name="smallUserImage" translatable="false">Small User Image</string>

    <!-- Länder -->
    <string name="german">Deutsch</string>
...
