...
                            android:layout_height="wrap_content"
                            android:layout_weight="24"
                            android:text="@string/givenname"
                            android:textColor="#fff" />

                        <TextView
                            android:id="@+id/textGivenName"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="38"
                            android:text="@string/stdValue"
                            android:textColor="#fff" />

...
                            android:layout_height="wrap_content"
                            android:layout_weight="24"
                            android:text="@string/surname"
                            android:textColor="#fff" />

                        <TextView
                            android:id="@+id/textSurName"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="38"
                            android:text="@string/stdValue"
                            android:textColor="#fff" />

...
                            android:layout_height="wrap_content"
                            android:layout_weight="24"
                            android:text="@string/region"
                            android:textColor="#fff" />

                        <TextView
                            android:id="@+id/textRegion"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="38"
                            android:text="@string/stdValue"
                            android:textColor="#fff" />

...
                            android:layout_height="wrap_content"
                            android:layout_weight="24"
                            android:text="@string/company"
                            android:textColor="#fff" />

                        <TextView
                            android:id="@+id/textCompany"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="38"
                            android:text="@string/stdValue"
                            android:textColor="#fff" />

...
