...
        android:layout_width="match_parent"
        android:layout_weight="60"
        android:layout_height="0dp"
        android:isScrollContainer="false">

        <android.support.v7.widget.RecyclerView
            android:id="@+id/rv_recycler_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/defaultMargin10" />
    </ScrollView>
</LinearLayout>

